Archive2/d6/8c9e6f8be40e87/output
main.cpp:45:7: error: no matching constructor for initialization of 'class DataOwnerCallback'
    } callback;
      ^
main.cpp:37:9: note: candidate constructor not viable: requires single argument 'p', but no arguments were provided
        DataOwnerCallback(decltype(l)& p)
        ^
main.cpp:33:11: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
    class DataOwnerCallback final : public IDataOwnerCallback
          ^
main.cpp:33:11: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided
1 error generated.
